# s3

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
client/: .eslintrc.json  .prettierignore  build.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/assets/: index.html  style.css
client/assets/gltf/: crater.glb  craterLarge.glb  meteorFull.glb  meteorFullRound.glb  meteorHalf.glb  rocks.glb  rocksOre.glb  rocksSmall.glb  rocksSmallOre.glb  rocksTall.glb  rocksTallOre.glb  spaceCraft1.glb  spaceCraft3.glb  spaceCraft6.glb
client/src/: connection.ts  controls.ts  ground.ts  index.ts  loader.ts  scene.ts  text.ts
db/: main.db
src/: boss.rs  bullet.rs  consts.rs  db.rs  main.rs  player.rs  server.rs
