[package]
name = "s3"
version = "0.1.0"
authors = ["modderme123 <modderme123@gmail.com>"]
edition = "2018"

[dependencies]
rand = "*"
nalgebra = {version = "*", features = ["serde-serialize"]}
rstar = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"
serde_repr = "*"

actix = "*"
actix-web = "*"
actix-files = "*"
actix-web-actors = "*"
actix-rt = "*"

r2d2 = "*"
r2d2_sqlite = "*"
rusqlite = "*"
failure = "*"